k8s/iluvcoffee.yaml
apiVersion: v1
kind: Service
metadata:
  name: iluvcoffee
  labels:
    app: iluvcoffee
  # annotations:
  #   cloud.google.com/load-balancer-type: "internal"
  #   cloud.google.com/neg: '{"exposed_ports":{"80":{}}}'
spec:
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 3000
  # - name: https
  #   # protocol: TCP
  #   port: 443
  #   targetPort: 5000
  selector:
    app: iluvcoffee
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iluvcoffee
  labels:
    app: iluvcoffee
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iluvcoffee
  template:
    metadata:
      labels:
        app: iluvcoffee
        version: v1
    spec:
      containers:
      - name: iluvcoffee
        image: clmdevops/iluvcoffee:1.0.0
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "200m"
        imagePullPolicy: Always #IfNotPresent
        ports:
        - containerPort: 3000
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 15
          timeoutSeconds: 5
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 15
          timeoutSeconds: 5
          failureThreshold: 3

      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - iluvcoffee
              topologyKey: kubernetes.io/hostname
